# miopen_cudnn_ops

./: CMakeLists.txt  README.md  build.sh  rebuild.sh
scripts/: op_driver_all.sh  op_driver_conv_bench.py  run_alexnet_bs512.sh  run_all.sh  run_all_fp16.sh  run_googlenet_bs128.sh  run_gtc_conv_model.sh  run_inception_v3_bs128.sh  run_inception_v4_bs64.sh  run_mask_rcnn.sh  run_resnet50_v1.5_bs128.sh  run_resnet50_v1.5_bs256.sh  run_resnext101_32x4d_bs32.sh  run_resnext101_64x4d_bs32.sh  run_resnext101_64x8d_bs32.sh  run_ssd_bs128.sh  run_vgg16_bs128.sh
src/backend/: backend.cc  backend.hpp  backend_cudnn.cc  backend_miopen.cc  math.cc  math.hpp  op_activation.cc  op_activation_cudnn.cc  op_activation_miopen.cc  op_convolution.cc  op_convolution_cudnn.cc  op_convolution_miopen.cc  op_pooling.cc  op_pooling.hpp  op_pooling_cudnn.cc  op_pooling_miopen.cc  operator.cc  operator.hpp
src/executable/: naive_conv.h  op_driver.cc  test_pooling.cc
